# my_cpp_starter

./: .cmake-format.yaml  .env  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  Taskfile.yml  Version.h.in  conanfile.txt
app/: CMakeLists.txt  StarterApp.cpp  main.cc
cmake/: .configure.cmake.swp  README.md  Version.h.in  clang-format.cmake  compiler-flag.cmake  compiler-warnings.cmake  compiler.cmake  configure.cmake  dependencies.cmake  documentation.cmake  out-of-source-build.cmake  pkg-manager.cmake  platform-validation.cmake  platform.cmake  static-analyzer.cmake  static-analyzers.cmake  unit-test.cmake
cmake/cmake-options/: cmake-options.cmake  compile-flag.cmake  compiler.cmake  out-of-source-build.cmake  verbose-output.cmake  warning-as-error.cmake
cmake/dependency_options/: index.cmake
cmake/program_options/: index.cmake
cmake/program_options/src/: Cache.cmake  CompilerWarnings.cmake  Conan.cmake  CoverageTests.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSetting.cmake  StaticAnalyzers.cmake  UnitTests.cmake
cmake/project-options/: clang-format.cmake  git-options.cmake  platform-validation.cmake  project-options.cmake
cmake/src/: Cache.cmake  CompilerWarnings.cmake  Conan.cmake  CoverageTests.cmake  Doxygen.cmake  InterproceduralOptimization.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSetting.cmake  StaticAnalyzers.cmake  UnitTests.cmake  Vcpkg.cmake
docs/: CMakeLists.txt  _greeter_8cpp__incl.md5  _greeter_8h__dep__incl.map  _greeter_8h__incl.map  _greeter_8h_source.html  _r_e_a_d_m_e_8md.html  _version_8h.html  _version_8h_source.html  annotated.html  app_2main_8cc.html  app_2main_8cc__incl.map  app_2main_8cc__incl.md5  catch2__example_2test__main_8cpp.html  catch2__example_2test__main_8cpp__incl.map  catch2__example_2test__main_8cpp__incl.md5  catch2__example_2test__main_8cpp_a36f11469f47bce015537d1fc2eadcf13_cgraph.map  catch2__example_2test__main_8cpp_a36f11469f47bce015537d1fc2eadcf13_cgraph.md5  catch2__example_2test__main_8cpp_aa99823a0fc8313c9c32541ce768fb801_icgraph.map  catch2__example_2test__main_8cpp_aa99823a0fc8313c9c32541ce768fb801_icgraph.md5  catch2__example_2test__main_8cpp_ac012721a2a98b039f7628f55aa61eb89_cgraph.map  catch2__example_2test__main_8cpp_ac012721a2a98b039f7628f55aa61eb89_cgraph.md5  catch2__example_2test__main_8cpp_ae1b37c26bb8e5744f5747d6cd6505356_cgraph.md5  catch2__example_2test__main_8cpp_ae1b37c26bb8e5744f5747d6cd6505356_icgraph.map  catch2__example_2test__main_8cpp_ae1b37c26bb8e5744f5747d6cd6505356_icgraph.md5  classes.html  classgreeter_1_1_greeter-members.html  classgreeter_1_1_greeter.html  dir_000000_000004.html  dir_000001_000004.html  dir_000002_000000.html  dir_000002_000004.html  dir_000005_000004.html  dir_2e797b7527b8cf9a0fc32577e902c8ce.html  dir_44bc935f2bdadb215b678d4732ee7a42.html  dir_44bc935f2bdadb215b678d4732ee7a42_dep.map  dir_44bc935f2bdadb215b678d4732ee7a42_dep.md5  dir_546e27cba8e9b35d6b545490f8d1fab2.html  dir_546e27cba8e9b35d6b545490f8d1fab2_dep.map  dir_546e27cba8e9b35d6b545490f8d1fab2_dep.md5  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  (+67 more)
docs/html/: _greeter_8cpp.html  _greeter_8cpp__incl.map  _greeter_8h.html  _greeter_8h__dep__incl.md5  _greeter_8h__incl.md5  _greeter_8h_source.html  _r_e_a_d_m_e_8md.html  _version_8h_source.html  classgreeter_1_1_greeter-members.html  classgreeter_1_1_greeter.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions_func.html  md__r_e_a_d_m_e.html  namespacegreeter.html  namespacemembers_enum.html  namespaces.html
docs/html/search/: all_0.js  all_5.js  all_6.js  all_8.js  classes_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  namespaces_0.js  searchdata.js
docs/pages/: about.dox
docs/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
hooks/: README.md  pre-commit
include/CppStarter/: CppStarter.h
include/Greeter/: Greeter.h
include/starter/: starter.h
lib/: CMakeLists.txt  CppStarter.cc  CppStarter.cpp  starter.cc
lib/include/: CppStarterInternal.h
libdeps/: README.md
scripts/: detectOS.sh  installDeps.sh
src/: Greeter.cpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt
tests/catch2_example/: main.cc  test_main.cpp
tests/gtest_example/: main.cc  test_main.cpp
